docs(website): created placeholders for the articles that are coming soon

--- a/documentation/serenity-js.org/docs/api-testing/index.mdx
+++ b/documentation/serenity-js.org/docs/api-testing/index.mdx
@@ -9,4 +9,10 @@ title: API testing
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 ```
 
+[Serenity/JS REST module](/api/rest) provides the building blocks to help you automate interactions with HTTP-based
+APIs of your system under test.
+
+In this chapter, you'll learn how to implement API-based test scenarios using Serenity/JS [Screenplay Pattern](/handbook/design/screenplay-pattern)
+libraries.
+
 <ArticleComingSoon />
