--- a/documentation/serenity-js.org/docs/integration/visual-studio-code.mdx
+++ b/documentation/serenity-js.org/docs/integration/visual-studio-code.mdx
@@ -4,6 +4,15 @@
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 ```
 
-<ArticleComingSoon />
+Serenity/JS integrates with [industry-standard test runners](/handbook/test-runners/), so that your test scenarios can be executed
+using your regular build tools, <abbr title="Continuous Integration and Delivery">CI/CD</abbr> pipelines, and <abbr title="Integrated Development Environments">IDEs</abbr>.
 
-## Playwright Test Plugin
+In this article, I'll show you how to configure [VisualStudio Code](https://code.visualstudio.com/),
+to run and debug automated acceptance tests built using Serenity/JS.
+
+:::tip While you wait
+While you're waiting for me to finish this article, you might enjoy learning
+how to use VisualStudio Code to [write your first Serenity/JS web scenario](/handbook/web-testing/your-first-web-scenario).
+:::
+
+<ArticleComingSoon />
