--- a/documentation/serenity-js.org/docs/mobile-testing/index.mdx
+++ b/documentation/serenity-js.org/docs/mobile-testing/index.mdx
@@ -9,5 +9,10 @@ title: Mobile testing
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 ```
 
+Serenity/JS integrates with [WebdriverIO](/handbook/test-runners/webdriverio) to enable mobile test automation using the [Appium](https://webdriver.io/docs/api/appium/) protocol.
+
+In this chapter, you'll learn how to implement test scenarios for mobile apps using Serenity/JS [Screenplay Pattern](/handbook/design/screenplay-pattern)
+libraries.
+
 <ArticleComingSoon />
 
