--- a/documentation/serenity-js.org/docs/integration/gitlab-ci.mdx
+++ b/documentation/serenity-js.org/docs/integration/gitlab-ci.mdx
@@ -4,10 +4,10 @@
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 ```
 
+Serenity/JS integrates with [industry-standard test runners](/handbook/test-runners/), so that your test scenarios can be executed
+using your regular build tools, <abbr title="Continuous Integration and Delivery">CI/CD</abbr> pipelines, and <abbr title="Integrated Development Environments">IDEs</abbr>.
+
+In this article, I'll show you how to configure [GitLab CI](https://about.gitlab.com/),
+to run automated acceptance tests built using Serenity/JS, and publish test execution reports and living documentation.
+
 <ArticleComingSoon />
-
-## Dependencies
-
-## Running tests
-
-## Publishing to GitLab Pages
