--- a/documentation/serenity-js.org/docs/integration/index.mdx
+++ b/documentation/serenity-js.org/docs/integration/index.mdx
@@ -5,8 +5,7 @@ title: Integration
 
 # Integration
 
-```mdx-code-block
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-```
+Serenity/JS integrates with [industry-standard test runners](/handbook/test-runners/), so that your test scenarios can be executed
+using your regular build tools, <abbr title="Continuous Integration and Delivery">CI/CD</abbr> pipelines, and <abbr title="Integrated Development Environments">IDEs</abbr>.
 
-<ArticleComingSoon />
+In this chapter, I'll show you how to configure your toolchain to run and debug Serenity/JS test scenarios and report on their results.
