--- a/documentation/serenity-js.org/docs/integration/jetbrains-idea.mdx
+++ b/documentation/serenity-js.org/docs/integration/jetbrains-idea.mdx
@@ -4,6 +4,11 @@
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 ```
 
-<ArticleComingSoon />
+Serenity/JS integrates with [industry-standard test runners](/handbook/test-runners/), so that your test scenarios can be executed
+using your regular build tools, <abbr title="Continuous Integration and Delivery">CI/CD</abbr> pipelines, and <abbr title="Integrated Development Environments">IDEs</abbr>.
 
-## Run configurations
+In this article, I'll show you how to configure [JetBrains IDEs](https://www.jetbrains.com/),
+such as [IntelliJ IDEA](https://www.jetbrains.com/idea/) and [WebStorm](https://www.jetbrains.com/webstorm/),
+to run and debug automated acceptance tests built using Serenity/JS.
+
+<ArticleComingSoon />
