docs(website): introduction to chapter on Core Design Patterns

--- a/documentation/serenity-js.org/docs/design/index.mdx
+++ b/documentation/serenity-js.org/docs/design/index.mdx
@@ -5,8 +5,6 @@ title: Core Design Patterns
 
 # Serenity/JS Core Design Patterns
 
-```mdx-code-block
-import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
-```
-
-<ArticleComingSoon />
+In this part of the Serenity/JS Handbook you'll learn about the core design patterns that underpin the framework.
+We'll take a deep dive into the [Screenplay Pattern](/handbook/design/screenplay-pattern), and you'll see how the principles
+of encapsulation, composability, coherency, and learnability permeate the design of the framework to benefit the test scenarios you create with it.
