docs(website): added placeholders for the remaining articles on design patterns

--- a/documentation/serenity-js.org/docs/design/data-structures.mdx
+++ b/documentation/serenity-js.org/docs/design/data-structures.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 6
+sidebar_position: 7
 ---
 
 # Data structures
@@ -8,9 +8,14 @@ sidebar_position: 6
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 ```
 
-Key points:
-- `QuestionAdapter`
-- `List`
-- `Notes`
+All the [activities](/api/core/class/Activity) performed by Serenity/JS actors are asynchronous,
+and so are the data structures that support them.
+Serenity/JS introduces several async-first data structures to support writing test scenarios that follow th [Screenplay Pattern](/handbook/design/screenplay-pattern).
+
+In this article, I'll show you how the following idiomatic Serenity/JS data structures work and how to use them in your scenarios:
+- [`Question`](/api/core/class/Question)
+- [`QuestionAdapter`](/api/core#QuestionAdapter)
+- [`List`](/api/core/class/List)
+- [`Notes`](/api/core/function/notes)
 
 <ArticleComingSoon />
