--- a/documentation/serenity-js.org/docs/web-testing/serenity-js-web-modules.mdx
+++ b/documentation/serenity-js.org/docs/web-testing/serenity-js-web-modules.mdx
@@ -8,4 +8,9 @@ sidebar_position: 6
 import ArticleComingSoon from '@site/src/components/ArticleComingSoon'
 ```
 
+Serenity/JS offers an integration library-agnostic, unified abstraction layer on top of popular web integration libraries,
+such as [Playwright](/api/playwright), [WebdriverIO](/api/webdriverio), and even [Selenium 3/Protractor](/api/protractor).
+
+In this article, I'll walk you through how Serenity/JS web modules work and how to use them in your test scenarios.
+
 <ArticleComingSoon />
